--- a/hyprland.conf
+++ b/hyprland.conf
@@ -420,7 +420,7 @@ plugin {
 
 
 ##############################
-### fuck AND WORKSPACES ###
+### WINDOWS AND WORKSPACES ###
 ##############################
 
 # See https://wiki.hypr.land/Configuring/Window-Rules/ for more
