--- a/my_sources/specialWorkspaces.conf
+++ b/my_sources/specialWorkspaces.conf
@@ -16,6 +16,10 @@ bind = $mainMod SHIFT, XF86Calculator, movetoworkspace, special:servers
 workspace = special:mpdClient, rounding:false, monitor:0, on-created-empty:[float; size 80% 80%] ghostty --title='mpdClient' -e ncmpcpp --host localhost
 bind = ,XF86Tools, togglespecialworkspace, mpdClient
 
+# music
+workspace = special:my_yazi, rounding:false, monitor:0, on-created-empty:[float; size 95% 95%] ghostty --title='yazi' -e yazi
+bind = ,KP_End, togglespecialworkspace, my_yazi
+
 # gemini-cli
 bind = $mainMod, G, togglespecialworkspace, gemini_win
 bind = $mainMod SHIFT, G, movetoworkspace, special:gemini_win
@@ -27,31 +31,24 @@ windowrule = float,title:gemini_win
 # Email
 bind = ,XF86Mail, exec, create_toggle.sh -email
 bind = $mainMod SHIFT, XF86Mail, movetoworkspace, special:email
-
 windowrule = workspace special:email, class:org.gnome.Evolution
 windowrule = size 85% 85%,class:org.gnome.Evolution
 windowrule = float,class:org.gnome.Evolution
 windowrule = move center,class:org.gnome.Evolution
-# yazi
-bind = $mainMod, KP_End, exec, create_toggle.sh -files
-windowrule = workspace special:my_yazi, title:yazi
-windowrule = float,title:yazi
-windowrule = size 95% 95%,title:yazi
 
-#notes
-bind = ,XF86HomePage, exec, create_toggle.sh -notes
 
-windowrule = workspace special:notes, title:notes
-windowrule = size 44.5% 95.5%,title:notes
-windowrule = float,title:notes
-windowrule = move 55% 3.29%,title:notes
+# notes
+workspace = special:notes, rounding:false, monitor:0, on-created-empty:[float; size 95% 95%; move 55% 3.29%] ghostty --title='notes' -e nvim /home/mike/vimwiki/index.wiki
+bind = ,XF86HomePage, togglespecialworkspace, notes
 
+workspace = special:my_copy, rounding:false, monitor:0, on-created-empty:[float; size 80% 80%] copyq toggle
+bind = , F6, togglespecialworkspace, my_copy
 # copyq
-bind = , F6, exec, create_toggle.sh -copy
-windowrule = workspace special:my_copy, class:com.github.hluk.copyq
-windowrule = float,class:com.github.hluk.copyq
-windowrule = size 95% 95%,class:com.github.hluk.copyq
-
+# bind = , F6, exec, create_toggle.sh -copy
+# windowrule = workspace special:my_copy, class:com.github.hluk.copyq
+# windowrule = float,class:com.github.hluk.copyq
+# windowrule = size 95% 95%,class:com.github.hluk.copyq
+#
 # drop down terminal
 bind = $mainMod, F6, exec, create_toggle.sh -term_util
 windowrule = workspace special:term_util, title:term_util
