--- a/my_sources/submaps.conf
+++ b/my_sources/submaps.conf
@@ -1,5 +1,24 @@
 $smc = exec, /home/mike/.config/hypr/scripts/smc
 
+bind = $mainMod, O, submap, opacity
+submap = opacity
+
+bind = , 0, setprop, active, alpha 1.0
+bind = , 1, setprop, active, alpha 0.1
+bind = , 2, setprop, active, alpha 0.2
+bind = , 3, setprop, active, alpha 0.3
+bind = , 4, setprop, active, alpha 0.4
+bind = , 5, setprop, active, alpha 0.5
+bind = , 6, setprop, active, alpha 0.6
+bind = , 7, setprop, active, alpha 0.7
+bind = , 8, setprop, active, alpha 0.8
+bind = , 9, setprop, active, alpha 0.9
+
+bind = , o, submap, reset
+bind = , escape, submap, reset
+submap = reset
+
+
 bind = $mainMod, A, submap, apps
 # bind = $mainMod ALT, M, exec, notify-send "Supmap (Master) active"
 
