--- a/my_sources/specialWorkspaces.conf
+++ b/my_sources/specialWorkspaces.conf
@@ -1,16 +1,14 @@
 # Example special workspace (scratchpad)
 
-bind = $mainMod, grave, exec, create_toggle.sh -gg_serv
-bind = $mainMod SHIFT, grave, movetoworkspace, special:live_server
-windowrule = float,class:live_server
-windowrule = size 95% 95%,class:live_server
-windowrule = workspace special:live_server, class:live_server
 
 # servers
 bind = ,XF86Calculator, togglespecialworkspace, servers
 bind = SHIFT ,XF86Calculator, togglespecialworkspace, servers
 bindr = ,XF86Calculator, togglespecialworkspace, servers
 bind = $mainMod SHIFT, XF86Calculator, movetoworkspace, special:servers
+
+workspace = special:servers, rounding:false, monitor:0, on-created-empty:[float; size 80% 80%] ghostty --title='servers' -e svs
+bind = ,KP_Page_Up, togglespecialworkspace, servers
 
 # music
 workspace = special:mpdClient, rounding:false, monitor:0, on-created-empty:[float; size 80% 80%] ghostty --title='mpdClient' -e ncmpcpp --host localhost
@@ -21,36 +19,22 @@ workspace = special:my_yazi, rounding:false, monitor:0, on-created-empty:[float;
 bind = ,KP_End, togglespecialworkspace, my_yazi
 
 # gemini-cli
-bind = $mainMod, G, togglespecialworkspace, gemini_win
-bind = $mainMod SHIFT, G, movetoworkspace, special:gemini_win
+workspace = special:gemini_win, rounding:false, monitor:0, on-created-empty:[float; size 95% 95%] ghostty --title='gemini_win' -e gemini
+bind = $mainMod SHIFT, G, togglespecialworkspace, gemini_win
 
-windowrule = size 1200 1400,title:gemini_win
-windowrule = workspace special:gemini_win, title:gemini_win
-windowrule = float,title:gemini_win
-
-# Email
-bind = ,XF86Mail, exec, create_toggle.sh -email
-bind = $mainMod SHIFT, XF86Mail, movetoworkspace, special:email
-windowrule = workspace special:email, class:org.gnome.Evolution
-windowrule = size 85% 85%,class:org.gnome.Evolution
-windowrule = float,class:org.gnome.Evolution
-windowrule = move center,class:org.gnome.Evolution
-
+workspace = special:email, rounding:false, monitor:0, on-created-empty:[float; size 85% 85%;] evolution
+bind = ,XF86Mail, togglespecialworkspace, email
 
 # notes
-workspace = special:notes, rounding:false, monitor:0, on-created-empty:[float; size 95% 95%; move 55% 3.29%] ghostty --title='notes' -e nvim /home/mike/vimwiki/index.wiki
-bind = ,XF86HomePage, togglespecialworkspace, notes
+workspace = special:notes, rounding:false, monitor:0, on-created-empty:[float; size 45% 95%; move 54% 3.29%] ghostty --title='notes' -e nvim /home/mike/vimwiki/index.wiki
+bind = ,KP_Home, togglespecialworkspace, notes
 
 workspace = special:my_copy, rounding:false, monitor:0, on-created-empty:[float; size 80% 80%] copyq toggle
 bind = , F6, togglespecialworkspace, my_copy
-# copyq
-# bind = , F6, exec, create_toggle.sh -copy
-# windowrule = workspace special:my_copy, class:com.github.hluk.copyq
-# windowrule = float,class:com.github.hluk.copyq
-# windowrule = size 95% 95%,class:com.github.hluk.copyq
-#
+
 # drop down terminal
-bind = $mainMod, F6, exec, create_toggle.sh -term_util
-windowrule = workspace special:term_util, title:term_util
-windowrule = float,title:term_util
-windowrule = size 95% 95%,title:term_util
+workspace = special:term_util, rounding:false, monitor:0, on-created-empty:[float; size 95% 95%] ghostty --title='term_util' -e tmux new -s UTILITY
+bind = $mainMod, F6, togglespecialworkspace, term_util
+
+workspace = special:updater, rounding:false, monitor:0, on-created-empty:[float; size 95% 95%] ghostty --title='updater' -e paru -Syu --noconfirm
+bind = $mainMod SHIFT, U, togglespecialworkspace, updater
