--- a/hyprland.conf
+++ b/hyprland.conf
@@ -433,6 +433,7 @@ plugin {
 # workspace = special:mpdClient, on-created-empty:[float; size 80% 80%] ghostty --title='mpdClient' -e ncmpcpp --host localhost
 # Ignore maximize requests from apps. You'll probably like this.
 windowrule = float, class:Thunar
+windowrule = float, class:mpv
 windowrule = float, title:Save File
 windowrule = float, title:org.musicbrainz.Picard
 windowrule = size 50% 50%, title:org.musicbrainz.Picard
