--- a/my_sources/specialWorkspaces.conf
+++ b/my_sources/specialWorkspaces.conf
@@ -7,8 +7,11 @@ bind = SHIFT ,XF86Calculator, togglespecialworkspace, servers
 bindr = ,XF86Calculator, togglespecialworkspace, servers
 bind = $mainMod SHIFT, XF86Calculator, movetoworkspace, special:servers
 
-workspace = special:servers, rounding:false, monitor:0, on-created-empty:[float; size 80% 80%] ghostty --title='servers' -e svs
+workspace = special:servers, rounding:false, monitor:0, on-created-empty:[float; size 95% 95%] ghostty --title='servers' -e svs
 bind = ,KP_Page_Up, togglespecialworkspace, servers
+
+workspace = special:sti, rounding:false, monitor:0, on-created-empty:[float; size 95% 95%] ghostty --title='sti' -e sti
+bind = ,KP_Page_Down, togglespecialworkspace, sti
 
 # music
 workspace = special:mpdClient, rounding:false, monitor:0, on-created-empty:[float; size 80% 80%] ghostty --title='mpdClient' -e ncmpcpp --host localhost
