--- a/hyprland.conf
+++ b/hyprland.conf
@@ -315,7 +315,7 @@ windowrule = float, title:ExitScript
 bind = $mainMod SHIFT, Q, exec, ghostty --title="ExitScript" -e exit_script.sh
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, m, exec, $menu
+bind = $mainMod, m, exec, rofi -show drun
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # ndwindle
 bind = $mainMod SHIFT, C, centerwindow 
