--- a/main.conf
+++ b/main.conf
@@ -264,6 +264,7 @@ input {
     kb_rules =
     special_fallthrough = true
 
+
     follow_mouse = 1
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
@@ -310,10 +311,11 @@ bind = $mainMod, Return, exec, $terminal
 bind = $mainMod Alt, KP_End, exec, thunar
 bind = $mainMod SHIFT, B, exec, google-chrome-stable --enable-features=UseOzonePlatform --ozone-platform=wayland --password-store=gnome-libsecret %U
 bind = $mainMod, Q, killactive,
-bind = $mainMod SHIFT, Q, exec, /home/mike/.config/hypr/scripts/exit_script.sh
+windowrule = float, title:ExitScript
+bind = $mainMod SHIFT, Q, exec, ghostty --title="ExitScript" -e exit_script.sh
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, M, exec, $menu
+bind = $mainMod, m, exec, rofi -show drun
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # ndwindle
 bind = $mainMod SHIFT, C, centerwindow 
@@ -416,8 +418,9 @@ plugin {
 }
 
 
+
 ##############################
-### fuck AND WORKSPACES ###
+### WINDOWS AND WORKSPACES ###
 ##############################
 
 # See https://wiki.hypr.land/Configuring/Window-Rules/ for more
@@ -427,8 +430,10 @@ plugin {
 # windowrule = float,class:^(kitty)$,title:^(kitty)$
 
 # NOTE: Workspace Rules 
+# workspace = special:mpdClient, on-created-empty:[float; size 80% 80%] ghostty --title='mpdClient' -e ncmpcpp --host localhost
 # Ignore maximize requests from apps. You'll probably like this.
 windowrule = float, class:Thunar
+windowrule = float, class:mpv
 windowrule = float, title:Save File
 windowrule = float, title:org.musicbrainz.Picard
 windowrule = size 50% 50%, title:org.musicbrainz.Picard
