--- a/hyprland.conf
+++ b/hyprland.conf
@@ -433,10 +433,13 @@ plugin {
 # workspace = special:mpdClient, on-created-empty:[float; size 80% 80%] ghostty --title='mpdClient' -e ncmpcpp --host localhost
 # Ignore maximize requests from apps. You'll probably like this.
 windowrule = float, class:Thunar
+windowrule = float, class:com.github.hluk.copyq
 windowrule = float, class:mpv
+windowrule = float, class:Darktable
 windowrule = float, title:Save File
 windowrule = float, title:org.musicbrainz.Picard
 windowrule = size 50% 50%, title:org.musicbrainz.Picard
+windowrule = size 50% 95%, class:com.github.hluk.copyq
 windowrule = size 50% 50%,class:Thunar
 windowrule = workspace 1, class:org.qutebrowser.qutebrowser
 windowrule = monitor:DVI-D-1 special:notes, class:live_server
