--- a/my_sources/specialWorkspaces.conf
+++ b/my_sources/specialWorkspaces.conf
@@ -9,17 +9,21 @@ bind = $mainMod SHIFT, XF86Calculator, movetoworkspace, special:servers
 
 workspace = special:servers, rounding:false, monitor:0, on-created-empty:[float; size 95% 95%] ghostty --title='servers' -e svs
 bind = ,KP_Page_Up, togglespecialworkspace, servers
+bind = ,KP_Page_Up, centerwindow
 
 workspace = special:sti, rounding:false, monitor:0, on-created-empty:[float; size 95% 95%] ghostty --title='sti' -e sti
 bind = ,KP_Page_Down, togglespecialworkspace, sti
+bind = ,KP_Page_Down, centerwindow
 
 # music
 workspace = special:mpdClient, rounding:false, monitor:0, on-created-empty:[float; size 80% 80%] ghostty --title='mpdClient' -e ncmpcpp --host localhost
 bind = ,XF86Tools, togglespecialworkspace, mpdClient
+bind = ,XF86Tools, centerwindow
 
 # music
 workspace = special:my_yazi, rounding:false, monitor:0, on-created-empty:[float; size 95% 95%] ghostty --title='yazi' -e yazi
 bind = ,KP_End, togglespecialworkspace, my_yazi
+bind = ,KP_End, centerwindow
 
 # gemini-cli
 workspace = special:gemini_win, rounding:false, monitor:0, on-created-empty:[float; size 95% 95%] ghostty --title='gemini_win' -e gemini
@@ -27,13 +31,19 @@ bind = $mainMod SHIFT, G, togglespecialworkspace, gemini_win
 
 workspace = special:email, rounding:false, monitor:0, on-created-empty:[float; size 85% 85%;] evolution
 bind = ,XF86Mail, togglespecialworkspace, email
+bind = ,XF86Mail, centerwindow
 
 # notes
-workspace = special:notes, rounding:false, monitor:0, on-created-empty:[float; size 45% 95%; move 54% 3.29%] ghostty --title='notes' -e nvim /home/mike/vimwiki/index.wiki
+workspace = special:notes, rounding:false, monitor:HDMI-A-1, on-created-empty:[float; size 45% 95%; move 54% 3.29%] ghostty --title='notes' -e nvim /home/mike/vimwiki/index.wiki
+bind = ,KP_Home, focusmonitor, HDMI-A-1
 bind = ,KP_Home, togglespecialworkspace, notes
+bind = ,KP_Home, centerwindow
+bind = ,KP_Home, moveactive, 690 0
 
-workspace = special:my_copy, rounding:false, monitor:0, on-created-empty:[float; size 80% 80%] copyq toggle
-bind = , F6, togglespecialworkspace, my_copy
+workspace = special:my_copy, rounding:false, on-created-empty:[float; size 50% 80%] copyq toggle
+bind = , KP_Begin, focusmonitor, HDMI-A-1
+bind = , KP_Begin, togglespecialworkspace, my_copy
+bind = , KP_Begin, centerwindow
 
 # drop down terminal
 workspace = special:term_util, rounding:false, monitor:0, on-created-empty:[float; size 95% 95%] ghostty --title='term_util' -e tmux new -s UTILITY
@@ -41,3 +51,8 @@ bind = $mainMod, F6, togglespecialworkspace, term_util
 
 workspace = special:updater, rounding:false, monitor:0, on-created-empty:[float; size 95% 95%] ghostty --title='updater' -e paru -Syu --noconfirm
 bind = $mainMod SHIFT, U, togglespecialworkspace, updater
+
+# Dark Table
+workspace = special:darktable, rounding:false, monitor:0, on-created-empty:[size 95% 95%] darktable
+bind = ,KP_Down, togglespecialworkspace, darktable
+bind = SHIFT ,KP_Down, movetoworkspace, special:darktable
