--- a/hyprland.conf
+++ b/hyprland.conf
@@ -48,10 +48,10 @@ source = /home/mike/.config/hypr/monitors.conf
 
 # See https://wiki.hypr.land/Configuring/Keywords/
 # Set programs that you use
-$terminal = ghostty
-$fileManager = ghostty --title="yazi" -e yazi
+$terminal = kitty
+$fileManager = kitty --title="yazi" -e yazi
 # $menu = pkill wofi || wofi --show drun
-$menu = pkill fuzzel || fuzzel --terminal="ghostty -e"
+$menu = pkill fuzzel || fuzzel --terminal="kitty -e"
 
 
 #for libadwaita gtk4 apps you can use this command:
@@ -298,7 +298,7 @@ bind = $mainMod SHIFT, SPACE, exec, $bin/bar -b
 bind = $mainMod, SPACE, exec, $bin/bar -s
 bind = $mainMod SHIFT, Return, layoutmsg, swapwithmaster
 bind = $mainMod SHIFT, B, exec, /home/mike/.config/hypr/scripts/swap_config.sh
-bind = $mainMod, F, fullscreen
+bind = $mainMod SHIFT, F, fullscreen
 bind = $mainMod SHIFT, L, exec, hyprlock
 
 # bind = , Print, exec, grimblast --freeze save output - | satty --filename -
@@ -312,9 +312,9 @@ bind = $mainMod Alt, KP_End, exec, thunar
 bind = $mainMod SHIFT, B, exec, google-chrome-stable --enable-features=UseOzonePlatform --ozone-platform=wayland --password-store=gnome-libsecret %U
 bind = $mainMod, Q, killactive,
 windowrule = float, title:ExitScript
-bind = $mainMod SHIFT, Q, exec, ghostty --title="ExitScript" -e exit_script.sh
+bind = $mainMod SHIFT, Q, exec, kitty --title="ExitScript" -e exit_script.sh
 bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, V, togglefloating,
+bind = $mainMod, f, togglefloating
 bind = $mainMod, m, exec, rofi -show drun
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # ndwindle
@@ -371,15 +371,7 @@ bind = SUPER, KP_Down, focusworkspaceoncurrentmonitor, 2
 bind = SUPER, KP_Next, focusworkspaceoncurrentmonitor, 3
 
 bind = SUPER, KP_Left, focusworkspaceoncurrentmonitor, 4
-#
-# # Move active window to a workspace with mainMod + SHIFT + [0-5]
-# bind = $mainMod SHIFT, 1, split-movetoworkspacesilent, 1
-# bind = $mainMod SHIFT, 2, split-movetoworkspacesilent, 2
-# bind = $mainMod SHIFT, 3, split-movetoworkspacesilent, 3
-# bind = $mainMod SHIFT, 4, split-movetoworkspacesilent, 4
-# bind = $mainMod SHIFT, 5, split-movetoworkspacesilent, 5
-#
- # Scroll through existing workspaces with mainMod + scroll
+
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
 
@@ -408,16 +400,6 @@ source = ~/.config/hypr/sources/layouts.conf
 source = ~/.config/hypr/my_sources/submaps.conf
 source = ~/.config/hypr/my_sources/specialWorkspaces.conf
 
-plugin {
-    split-monitor-workspaces {
-        count = 5
-        keep_focused = 1
-        enable_notifications = 1
-        enable_persistent_workspaces = 1
-    }
-}
-
-
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
@@ -430,11 +412,12 @@ plugin {
 # windowrule = float,class:^(kitty)$,title:^(kitty)$
 
 # NOTE: Workspace Rules 
-# workspace = special:mpdClient, on-created-empty:[float; size 80% 80%] ghostty --title='mpdClient' -e ncmpcpp --host localhost
+# workspace = special:mpdClient, on-created-empty:[float; size 80% 80%] kitty --title='mpdClient' -e ncmpcpp --host localhost
 # Ignore maximize requests from apps. You'll probably like this.
 windowrule = float, class:Thunar
 windowrule = float, class:com.github.hluk.copyq
 windowrule = float, class:mpv
+windowrule = float, class:photoqt
 windowrule = float, class:Darktable
 windowrule = float, title:Save File
 windowrule = float, title:org.musicbrainz.Picard
