--- a/my_sources/specialWorkspaces.conf
+++ b/my_sources/specialWorkspaces.conf
@@ -2,39 +2,30 @@
 
 
 # servers
-bind = ,XF86Calculator, togglespecialworkspace, servers
-bind = SHIFT ,XF86Calculator, togglespecialworkspace, servers
-bindr = ,XF86Calculator, togglespecialworkspace, servers
-bind = $mainMod SHIFT, XF86Calculator, movetoworkspace, special:servers
-
-workspace = special:servers, rounding:false, monitor:0, on-created-empty:[float; size 95% 95%] ghostty --title='servers' -e svs
+workspace = special:servers, rounding:false, monitor:0, on-created-empty:[float; size 95% 95%] kitty --title='servers' -e svs
 bind = ,KP_Page_Up, togglespecialworkspace, servers
-bind = ,KP_Page_Up, centerwindow
+bind = ,KP_Page_Up, exec, resize_center.sh 95%
 
-workspace = special:sti, rounding:false, monitor:0, on-created-empty:[float; size 95% 95%] ghostty --title='sti' -e sti
+workspace = special:sti, rounding:false, monitor:0, on-created-empty:[float] kitty --title='sti' -e sti
 bind = ,KP_Page_Down, togglespecialworkspace, sti
-bind = ,KP_Page_Down, centerwindow
+bind = ,KP_Page_Down, exec, resize_center.sh 98%
 
 # music
-workspace = special:mpdClient, rounding:false, monitor:0, on-created-empty:[float; size 80% 80%] ghostty --title='mpdClient' -e ncmpcpp --host localhost
+workspace = special:mpdClient, rounding:false, monitor:0, on-created-empty:[float; size 80% 80%] kitty --title='mpdClient' -e ncmpcpp --host localhost
 bind = ,XF86Tools, togglespecialworkspace, mpdClient
-bind = ,XF86Tools, centerwindow
+bind = ,XF86Tools, exec, resize_center.sh 95%
 
 # music
-workspace = special:my_yazi, rounding:false, monitor:0, on-created-empty:[float; size 95% 95%] ghostty --title='yazi' -e yazi
+workspace = special:my_yazi, rounding:false, monitor:0, on-created-empty:[float; size 95% 95%] kitty --title='yazi' -e yazi
 bind = ,KP_End, togglespecialworkspace, my_yazi
-bind = ,KP_End, centerwindow
-
-# gemini-cli
-workspace = special:gemini_win, rounding:false, monitor:0, on-created-empty:[float; size 95% 95%] ghostty --title='gemini_win' -e gemini
-bind = $mainMod SHIFT, G, togglespecialworkspace, gemini_win
+bind = ,KP_End, exec, resize_center.sh 95%
 
 workspace = special:email, rounding:false, monitor:0, on-created-empty:[float; size 85% 85%;] evolution
 bind = ,XF86Mail, togglespecialworkspace, email
-bind = ,XF86Mail, centerwindow
+bind = ,XF86Mail, exec, resize_center.sh 95%
 
 # notes
-workspace = special:notes, rounding:false, monitor:HDMI-A-1, on-created-empty:[float; size 45% 95%; move 54% 3.29%] ghostty --title='notes' -e nvim /home/mike/vimwiki/index.wiki
+workspace = special:notes, rounding:false, monitor:HDMI-A-1, on-created-empty:[float; size 45% 95%; move 54% 3.29%] kitty --title='notes' -e nvim /home/mike/vimwiki/index.wiki
 bind = ,KP_Home, focusmonitor, HDMI-A-1
 bind = ,KP_Home, togglespecialworkspace, notes
 bind = ,KP_Home, centerwindow
@@ -43,16 +34,21 @@ bind = ,KP_Home, moveactive, 690 0
 workspace = special:my_copy, rounding:false, on-created-empty:[float; size 50% 80%] copyq toggle
 bind = , KP_Begin, focusmonitor, HDMI-A-1
 bind = , KP_Begin, togglespecialworkspace, my_copy
-bind = , KP_Begin, centerwindow
+bind = , KP_Begin, exec, resize_center.sh 90%
 
 # drop down terminal
-workspace = special:term_util, rounding:false, monitor:0, on-created-empty:[float; size 95% 95%] ghostty --title='term_util' -e tmux new -s UTILITY
-bind = $mainMod, F6, togglespecialworkspace, term_util
+workspace = special:term_util, rounding:false, monitor:0, on-created-empty:[float; size 95% 95%] kitty --title='term_util' -e tmux new -s UTILITY
+bind = , KP_Up, togglespecialworkspace, term_util
+bind = SHIFT, KP_Up, setfloating
+bind = , KP_Up, exec, resize_center.sh 98%
+bind = SHIFT, KP_Up, movetoworkspace, special:term_util
 
-workspace = special:updater, rounding:false, monitor:0, on-created-empty:[float; size 95% 95%] ghostty --title='updater' -e paru -Syu --noconfirm
+workspace = special:updater, rounding:false, monitor:0, on-created-empty:[float; size 95% 95%] kitty --title='updater' -e paru -Syu --noconfirm
 bind = $mainMod SHIFT, U, togglespecialworkspace, updater
 
 # Dark Table
-workspace = special:darktable, rounding:false, monitor:0, on-created-empty:[size 95% 95%] darktable
-bind = ,KP_Down, togglespecialworkspace, darktable
-bind = SHIFT ,KP_Down, movetoworkspace, special:darktable
+workspace = special:photoqt, rounding:false, monitor:0, on-created-empty:[size 95% 95%] photoqt
+bind = ,KP_Down, setfloating
+bind = ,KP_Down, exec, resize_center.sh 98%
+bind = ,KP_Down, togglespecialworkspace, photoqt
+bind = SHIFT ,KP_Down, movetoworkspace, special:photoqt
