--- a/hyprland.conf
+++ b/hyprland.conf
@@ -313,7 +313,7 @@ bind = $mainMod SHIFT, B, exec, google-chrome-stable --enable-features=UseOzoneP
 bind = $mainMod, Q, killactive,
 windowrule = float, title:ExitScript
 bind = $mainMod SHIFT, Q, exec, kitty --title="ExitScript" -e exit_script.sh
-bind = $mainMod, E, exec, $fileManager
+# bind = $mainMod, E, exec, thunar
 bind = $mainMod, f, togglefloating
 bind = $mainMod, m, exec, rofi -show drun
 bind = $mainMod, P, pseudo, # dwindle
@@ -418,6 +418,8 @@ windowrule = float, class:Thunar
 windowrule = float, class:com.github.hluk.copyq
 windowrule = float, class:mpv
 windowrule = float, class:photoqt
+windowrule = float, class:thunar
+windowrule = float, class:file-jpeg
 windowrule = float, class:Darktable
 windowrule = float, title:Save File
 windowrule = float, title:org.musicbrainz.Picard
