--- a/my_sources/specialWorkspaces.conf
+++ b/my_sources/specialWorkspaces.conf
@@ -4,25 +4,29 @@
 # servers
 workspace = special:servers, rounding:false, monitor:0, on-created-empty:[float; size 95% 95%] kitty --title='servers' -e svs
 bind = ,KP_Page_Up, togglespecialworkspace, servers
-bind = ,KP_Page_Up, exec, resize_center.sh 95%
+bind = ,KP_Page_Up, exec, resize_center.sh 95% 95%
 
 workspace = special:sti, rounding:false, monitor:0, on-created-empty:[float] kitty --title='sti' -e sti
 bind = ,KP_Page_Down, togglespecialworkspace, sti
-bind = ,KP_Page_Down, exec, resize_center.sh 98%
+bind = ,KP_Page_Down, exec, resize_center.sh 98% 95%
 
 # music
 workspace = special:mpdClient, rounding:false, monitor:0, on-created-empty:[float; size 80% 80%] kitty --title='mpdClient' -e ncmpcpp --host localhost
 bind = ,XF86Tools, togglespecialworkspace, mpdClient
-bind = ,XF86Tools, exec, resize_center.sh 95%
+bind = ,XF86Tools, exec, resize_center.sh 95% 95%
 
 # music
 workspace = special:my_yazi, rounding:false, monitor:0, on-created-empty:[float; size 95% 95%] kitty --title='yazi' -e yazi
 bind = ,KP_End, togglespecialworkspace, my_yazi
-bind = ,KP_End, exec, resize_center.sh 95%
+bind = ,KP_End, exec, resize_center.sh 95% 95%
 
 workspace = special:email, rounding:false, monitor:0, on-created-empty:[float; size 85% 85%;] evolution
 bind = ,XF86Mail, togglespecialworkspace, email
-bind = ,XF86Mail, exec, resize_center.sh 95%
+bind = ,XF86Mail, exec, resize_center.sh 95% 95%
+
+workspace = special:fm, rounding:false, monitor:0, on-created-empty:[float; size 65% 65%;] thunar
+bind = $mainMod, e, togglespecialworkspace, fm
+bind = $mainMod, e, exec, resize_center.sh 65% 65%
 
 # notes
 workspace = special:notes, rounding:false, monitor:HDMI-A-1, on-created-empty:[float; size 45% 95%; move 54% 3.29%] kitty --title='notes' -e nvim /home/mike/vimwiki/index.wiki
@@ -34,13 +38,13 @@ bind = ,KP_Home, moveactive, 690 0
 workspace = special:my_copy, rounding:false, on-created-empty:[float; size 50% 80%] copyq toggle
 bind = , KP_Begin, focusmonitor, HDMI-A-1
 bind = , KP_Begin, togglespecialworkspace, my_copy
-bind = , KP_Begin, exec, resize_center.sh 90%
+bind = , KP_Begin, exec, resize_center.sh 90% 95%
 
 # drop down terminal
 workspace = special:term_util, rounding:false, monitor:0, on-created-empty:[float; size 95% 95%] kitty --title='term_util' -e tmux new -s UTILITY
 bind = , KP_Up, togglespecialworkspace, term_util
 bind = SHIFT, KP_Up, setfloating
-bind = , KP_Up, exec, resize_center.sh 98%
+bind = , KP_Up, exec, resize_center.sh 98% 98%
 bind = SHIFT, KP_Up, movetoworkspace, special:term_util
 
 workspace = special:updater, rounding:false, monitor:0, on-created-empty:[float; size 95% 95%] kitty --title='updater' -e paru -Syu --noconfirm
@@ -49,6 +53,6 @@ bind = $mainMod SHIFT, U, togglespecialworkspace, updater
 # Dark Table
 workspace = special:photoqt, rounding:false, monitor:0, on-created-empty:[size 95% 95%] photoqt
 bind = ,KP_Down, setfloating
-bind = ,KP_Down, exec, resize_center.sh 98%
+bind = ,KP_Down, exec, resize_center.sh 98% 98%
 bind = ,KP_Down, togglespecialworkspace, photoqt
 bind = SHIFT ,KP_Down, movetoworkspace, special:photoqt
