--- a/hypridle.conf
+++ b/hypridle.conf
@@ -5,7 +5,7 @@
 # $dt = 35
 # $st = 40
 
-real times
+# real times
 $wbt = 298 
 $bt = 300
 $lst = 600
@@ -21,7 +21,7 @@ general {
 listener {
     timeout = $wbt
     on-timeout = killall waybar
-    on-resume = exec /home/mike/bin/bar -r
+    on-resume = exec /home/mike/bin/hypr_bar.sh -r
 }
 
 listener {
