--- a/hyprland.conf
+++ b/hyprland.conf
@@ -125,7 +125,6 @@ general {
     border_size = 1
 
     # disable borders for floating windows
-    no_border_on_floating = false
 
     gaps_in = 1
     gaps_out = 3,2,4,2
@@ -141,9 +140,8 @@ general {
 
     # Please see https://wiki.hypr.land/Configuring/Tearing/ before you turn this on
     allow_tearing = false
-
     # Default layout choices are 'dwindle' and 'master'. More layouts available via plugin.
-    layout = master
+    layout = scrolling
     # snap is for floating windows and whether or not they should stick
     # at the edges of the monitor and other windows<D-Bslash>
     snap {
@@ -156,7 +154,12 @@ general {
 	respect_gaps = false
     }
 }
-
+plugin {
+    hyprscrolling {
+        column_width = 0.8
+        fullscreen_on_one_column = true
+    }
+}
 # https://wiki.hypr.land/Configuring/Variables/#decoration
 decoration {
     rounding = 4
@@ -231,10 +234,10 @@ animations {
 workspace = w[tv1], gapsout:0, gapsin:0
 workspace = f[1], gapsout:0, gapsin:0        # Slide the media special workspace from the right
 workspace = special:notes, animation:slide 20%
-windowrule = bordersize 0, floating:0, onworkspace:w[tv1]
-windowrule = rounding 0, floating:0, onworkspace:w[tv1]
-windowrule = bordersize 0, floating:0, onworkspace:f[1]
-windowrule = rounding 0, floating:0, onworkspace:f[1]
+# windowrule = bordersize 0, floating:0, onworkspace:w[tv1]
+# windowrule = rounding 0, floating:0, onworkspace:w[tv1]
+# windowrule = bordersize 0, floating:0, onworkspace:f[1]
+# windowrule = rounding 0, floating:0, onworkspace:f[1]
 
 # See https://wiki.hypr.land/Configuring/Dwindle-Layout/ for more
 dwindle {
@@ -300,8 +303,7 @@ bind = $mainMod SHIFT, Return, layoutmsg, swapwithmaster
 bind = $mainMod SHIFT, B, exec, /home/mike/.config/hypr/scripts/swap_config.sh
 bind = $mainMod SHIFT, F, fullscreen
 bind = $mainMod SHIFT, L, exec, hyprlock
-
-# bind = , Print, exec, grimblast --freeze save output - | satty --filename -
+bind = , Print, exec, grimblast --freeze save output - | satty --filename -
 # Screenshot region and pipe to swappy for editing
 bind = ,Print, exec, hyprshot -m region --raw | swappy -f -
 
@@ -311,11 +313,11 @@ bind = $mainMod, Return, exec, $terminal
 bind = $mainMod Alt, KP_End, exec, thunar
 bind = $mainMod SHIFT, B, exec, google-chrome-stable --enable-features=UseOzonePlatform --ozone-platform=wayland --password-store=gnome-libsecret %U
 bind = $mainMod, Q, killactive,
-windowrule = float, title:ExitScript
 bind = $mainMod SHIFT, Q, exec, kitty --title="ExitScript" -e exit_script.sh
 # bind = $mainMod, E, exec, thunar
 bind = $mainMod, f, togglefloating
 bind = $mainMod, m, exec, rofi -show drun
+bind = $mainMod, b, exec, wp_random.sh
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # ndwindle
 bind = $mainMod SHIFT, C, centerwindow 
@@ -341,7 +343,12 @@ bind = $mainMod, 7, workspace, 7
 bind = $mainMod, 8, workspace, 8
 bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
-
+bind = $mainMod, period, layoutmsg, move +col
+bind = $mainMod, comma, layoutmsg, move -col
+bind = $mainMod SHIFT, period, layoutmsg, movewindowto r
+bind = $mainMod SHIFT, comma, layoutmsg, movewindowto l
+bind = $mainMod SHIFT, up, layoutmsg, movewindowto u
+bind = $mainMod SHIFT, down, layoutmsg, movewindowto d
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
 bind = $mainMod SHIFT, 2, movetoworkspace, 2
@@ -414,22 +421,23 @@ source = ~/.config/hypr/my_sources/specialWorkspaces.conf
 # NOTE: Workspace Rules 
 # workspace = special:mpdClient, on-created-empty:[float; size 80% 80%] kitty --title='mpdClient' -e ncmpcpp --host localhost
 # Ignore maximize requests from apps. You'll probably like this.
-windowrule = float, class:Thunar
-windowrule = float, class:com.github.hluk.copyq
-windowrule = float, class:mpv
-windowrule = float, class:photoqt
-windowrule = float, class:thunar
-windowrule = float, class:file-jpeg
-windowrule = float, class:Darktable
-windowrule = float, title:Save File
-windowrule = float, title:org.musicbrainz.Picard
-windowrule = size 50% 50%, title:org.musicbrainz.Picard
-windowrule = size 50% 95%, class:com.github.hluk.copyq
-windowrule = size 50% 50%,class:Thunar
-windowrule = workspace 1, class:org.qutebrowser.qutebrowser
-windowrule = monitor:DVI-D-1 special:notes, class:live_server
+windowrule = match:class Thunar float
+windowrule = match:class com.github.hluk.copyq float
+windowrule = match:class mpv float
+windowrule = match:class photoqt float
+windowrule = match:class thunar float
+windowrule = match:class file-jpeg float
+windowrule = match:class Darktable float
+windowrule = match:class com.github.hluk.copyq size 50% 95% 
+windowrule = match:class Thunar size 50% 50%
+windowrule = match:class org.qutebrowser.qutebrowser workspace 1
+windowrule = match:class live_server monitor:DVI-D-1 special:notes
+windowrule = match:class Conky noblur
 
-windowrule = noblur, class:Conky
-windowrule = suppressevent maximize, class:.*
+windowrule = match:title "Save File" float
+windowrule = match:title org.musicbrainz.Picard float
+windowrule = match:title org.musicbrainz.Picardsize 50% 50%
+windowrule = match:title ExitScript float
+
+windowrule = match:class * suppressevent maximize
 # Fix some dragging issues with XWayland
-windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
