--- a/hyprlock.conf
+++ b/hyprlock.conf
@@ -1,6 +1,6 @@
 background {
     monitor =
-    path = /home/mike/wallpaper/trees-7541217.jpg  # supports png, jpg, webp (no animations, though)
+    path = /home/mike/wallpaper/ashford-marx-KI6pbzLas8w-unsplash.jpg
     color = rgba(25, 20, 20, 1.0)
 
     # all these options are taken from hyprland, see https://wiki.hyprland.org/Configuring/Variables/#blur for explanations
