--- a/my_sources/specialWorkspaces.conf
+++ b/my_sources/specialWorkspaces.conf
@@ -13,12 +13,12 @@ bind = ,KP_Page_Down, exec, resize_center.sh 98% 95%
 # music
 workspace = special:mpdClient, rounding:false, monitor:0, on-created-empty:[float; size 80% 80%] kitty --title='mpdClient' -e ncmpcpp --host localhost
 bind = ,XF86Tools, togglespecialworkspace, mpdClient
-bind = ,XF86Tools, exec, resize_center.sh 95% 95%
+bind = ,XF86Tools, exec, resize_center.sh 95% 90%
 
 # music
 workspace = special:my_yazi, rounding:false, monitor:0, on-created-empty:[float; size 95% 95%] kitty --title='yazi' -e yazi
 bind = ,KP_End, togglespecialworkspace, my_yazi
-bind = ,KP_End, exec, resize_center.sh 95% 95%
+bind = ,KP_End, exec, resize_center.sh 95% 92%
 
 workspace = special:email, rounding:false, monitor:0, on-created-empty:[float; size 85% 85%;] evolution
 bind = ,XF86Mail, togglespecialworkspace, email
@@ -29,11 +29,11 @@ bind = $mainMod, e, togglespecialworkspace, fm
 bind = $mainMod, e, exec, resize_center.sh 65% 65%
 
 # notes
-workspace = special:notes, rounding:false, monitor:HDMI-A-1, on-created-empty:[float; size 45% 95%; move 54% 3.29%] kitty --title='notes' -e nvim /home/mike/vimwiki/index.wiki
-bind = ,KP_Home, focusmonitor, HDMI-A-1
-bind = ,KP_Home, togglespecialworkspace, notes
-bind = ,KP_Home, centerwindow
-bind = ,KP_Home, moveactive, 690 0
+workspace = special:notes, rounding:false, monitor:0, on-created-empty:[float; size 45% 95%; move 54% 3.5%] kitty --title='notes' -e nvim /home/mike/md_notes/index.md
+bind = ,XF86HomePage, togglespecialworkspace, notes
+bind = ,XF86HomePage, focusmonitor, HDMI-A-1
+bind = ,XF86HomePage, centerwindow
+bind = ,XF86HomePage, moveactive, 690 0
 
 workspace = special:my_copy, rounding:false, on-created-empty:[float; size 50% 80%] copyq toggle
 bind = , KP_Begin, focusmonitor, HDMI-A-1
