--- a/my_sources/submaps.conf
+++ b/my_sources/submaps.conf
@@ -18,6 +18,15 @@ bind = , o, submap, reset
 bind = , escape, submap, reset
 submap = reset
 
+bind = $mainMod, G, submap, group
+submap = group
+
+bind = , g, togglegroup
+
+bind = , o, submap, reset
+bind = , escape, submap, reset
+submap = reset
+
 
 bind = $mainMod, A, submap, apps
 # bind = $mainMod ALT, M, exec, notify-send "Supmap (Master) active"
