--- a/waybar/small_bar.jsonc
+++ b/waybar/small_bar.jsonc
@@ -1,151 +1,136 @@
-// -*- mode: jsonc -*-
 {
-    // "layer": "top", // Waybar at top layer
-    // "position": "bottom", // Waybar position (top|bottom|left|right)
-    "reload_style_on_change": true,
-    "output": "DVI-D-1",
-    "height": 30, // Waybar height (to be removed for auto height)
-    // "width": 1280, // Waybar width
-    "spacing": 4, // Gaps between modules (4px)
-    // Choose the order of the modules
-    "modules-left": [
-        "hyprland/workspaces",
-        // "sway/mode",
-        // "sway/scratchpad",
-        "custom/media"
-    ],
-    "modules-center": [
-        "pulseaudio",
-    ],
-    "modules-right": [
-        // "mpd",
-        "idle_inhibitor",
-        // "pulseaudio",
-        "network",
-        // "power-profiles-daemon",
-        "cpu",
-        "memory",
-        // "backlight",
-        // "keyboard-state",
-        "clock",
-        "tray"
-        // "custom/power"
-    ],
- "hyprland/workspaces": {
-    "format": "{name} {icon}",
+  "reload_style_on_change": true,
+  "output": "DVI-D-1",
+  "layer": "top",
+  "modules-left": ["hyprland/workspaces"],
+  "modules-center": ["hyprland/window"],
+  "modules-right": ["pulseaudio", "cpu", "memory", "tray"],
+
+  "clock": {
+    "format-alt": "{:%Y-%m-%d}",
+  },
+  "cpu": {
+    "format": "CPU: {usage}%",
+    "tooltip": false,
+  },
+  "memory": {
+    "format": "Mem: {used}GiB",
+  },
+  "mpd": {
+    "format": "{stateIcon} {artist} - {album} - {title} ({elapsedTime:%M:%S}/{totalTime:%M:%S}) ⸨{songPosition}|{queueLength}⸩ ",
+    "port": 6601,
+    "server": "localhost",
+    "format-disconnected": "Disconnected ",
+    "format-stopped": "{consumeIcon}{randomIcon}{repeatIcon}{singleIcon}Stopped ",
+    "unknown-tag": "N/A",
+    "interval": 5,
+    "consume-icons": {
+      "on": " ",
+    },
+    "random-icons": {
+      "off": "<span color=\"#f53c3c\"></span> ",
+      "on": " ",
+    },
+    "repeat-icons": {
+      "on": " ",
+    },
+    "single-icons": {
+      "on": "1 ",
+    },
+    "state-icons": {
+      "paused": "",
+      "playing": "",
+    },
+    "tooltip-format": "MPD (connected)",
+    "tooltip-format-disconnected": "MPD (disconnected)",
+  },
+  // "tray": {
+  //   // "icon-size": 21,
+  //   "spacing": 10,
+  //   // "icons": {
+  //   //   "blueman": "bluetooth",
+  //   //   "TelegramDesktop": "$HOME/.local/share/icons/hicolor/16x16/apps/telegram.png"
+  //   // }
+  // },
+  "pulseaudio": {
+    // "scroll-step": 1, // %, can be a float
+    "format": "{volume}% {icon} {format_source}",
+    "format-bluetooth": "{volume}% {icon} {format_source}",
+    "format-bluetooth-muted": " {icon} {format_source}",
+    "format-muted": " {format_source}",
+    "format-source": "{volume}% ",
+    "format-source-muted": "",
     "format-icons": {
-      "1": "\uf015",
+      "headphone": "",
+      "hands-free": "",
+      "headset": "",
+      "phone": "",
+      "portable": "",
+      "car": "",
+      "default": ["", "", ""],
+    },
+    "on-click": "pavucontrol",
+  },
+  "dwl/tags": {
+    "num-tags": 9,
+  },
+  "dwl/window#layout": {
+    "format": "[{layout}]",
+  },
+  "dwl/window#title": {
+    "format": "{title}",
+  },
+  "custom/sep": {
+    "format": "|",
+    "interval": 0,
+  },
+  "hyprland/workspaces": {
+    "format": "{name} {icon}",
+    "active-only": false,
+    "show-special": true,
+    "persistent-workspaces": {
+      // "HDMI-A-1": [1, 3, 5, 7, 9],
+      "DVI-D-1": [2, 4, 6, 8, 10],
+    },
+    "format-icons": {
+      "2": "\uf015",
+      "4": "\uea85",
       "urgent": "",
-      "active": "", // focused workspace on current monitor 
+      "active": "", // focused workspace on current monitor
       "visible": "", // focused workspace on other monitors
       "default": "",
-      "empty": "" // persistent (created by this plugin)
+      "empty": "", // persistent (created by this plugin)
     },
-    "all-outputs": false // recommended
+    "all-outputs": false, // recommended
   },
-    "mpd": {
-        "format": "{stateIcon} {consumeIcon}{randomIcon}{repeatIcon}{singleIcon}{artist} - {album} - {title} ({elapsedTime:%M:%S}/{totalTime:%M:%S}) ⸨{songPosition}|{queueLength}⸩ {volume}% ",
-        "format-disconnected": "Disconnected ",
-        "format-stopped": "{consumeIcon}{randomIcon}{repeatIcon}{singleIcon}Stopped ",
-        "unknown-tag": "N/A",
-        "interval": 5,
-        "consume-icons": {
-            "on": " "
-        },
-        "random-icons": {
-            "off": "<span color=\"#f53c3c\"></span> ",
-            "on": " "
-        },
-        "repeat-icons": {
-            "on": " "
-        },
-        "single-icons": {
-            "on": "1 "
-        },
-        "state-icons": {
-            "paused": "",
-            "playing": ""
-        },
-        "tooltip-format": "MPD (connected)",
-        "tooltip-format-disconnected": "MPD (disconnected)"
+  "hyprland/window": {
+    "format": "👉 {}",
+    "rewrite": {
+      "(.*) — Mozilla Firefox": "🌎 $1",
+      "(.*) - fish": "> [$1]",
     },
-    "idle_inhibitor": {
-        "format": "{icon}",
-        "format-icons": {
-            "activated": "",
-            "deactivated": ""
-        }
+    "separate-outputs": true,
+  },
+  "custom/current_layout": {
+    "exec": "~/.config/mango/waybar/current_layout_s.sh",
+    "return-type": "json",
+    "format": "{text}",
+    "tooltip": false,
+    "menu": "on-click",
+    "menu-file": "~/.config/mango/waybar/LayoutMenu.xml",
+    "menu-actions": {
+      "scroller": "mmsg -l S",
+      "verticle_scroller": "mmsg -l VS",
+      "tile": "mmsg -l T",
+      "center_tile": "mmsg -l CT",
+      "monocle": "mmsg -l M",
+      "vertical_scroller": "mmsg -l VS",
+      "right_tile": "mmsg -l RT",
+      "deck": "mmsg -l K",
+      "vertical_deck": "mmsg -l VK",
+      "grid": "mmsg -l G",
+      "vertical_grid": "mmsg -l VG",
     },
-    "tray": {
-        // "icon-size": 21,
-        "spacing": 10,
-        // "icons": {
-        //   "blueman": "bluetooth",
-        //   "TelegramDesktop": "$HOME/.local/share/icons/hicolor/16x16/apps/telegram.png"
-        // }
-    },
-    "clock": {
-        // "timezone": "America/New_York",
-        "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
-        "format-alt": "{:%Y-%m-%d}"
-    },
-    "cpu": {
-        "format": "{usage}% ",
-        "tooltip": false
-    },
-    "memory": {
-        "format": "{}% "
-    },
-    "network": {
-        // "interface": "wlp2*", // (Optional) To force the use of this interface
-        "format-wifi": "{essid} ({signalStrength}%) ",
-        "format-ethernet": "{ipaddr}/{cidr} ",
-        "tooltip-format": "{ifname} via {gwaddr} ",
-        "format-linked": "{ifname} (No IP) ",
-        "format-disconnected": "Disconnected ⚠",
-        "format-alt": "{ifname}: {ipaddr}/{cidr}"
-    },
-    "pulseaudio": {
-        // "scroll-step": 1, // %, can be a float
-        "format": "{volume}% {icon} {format_source}",
-        "format-bluetooth": "{volume}% {icon} {format_source}",
-        "format-bluetooth-muted": " {icon} {format_source}",
-        "format-muted": " {format_source}",
-        "format-source": "{volume}% ",
-        "format-source-muted": "",
-        "format-icons": {
-            "headphone": "",
-            "hands-free": "",
-            "headset": "",
-            "phone": "",
-            "portable": "",
-            "car": "",
-            "default": ["", "", ""]
-        },
-        "on-click": "pavucontrol"
-    },
-    "custom/media": {
-        "format": "{icon} {text}",
-        "return-type": "json",
-        "max-length": 40,
-        "format-icons": {
-            "spotify": "",
-            "default": "🎜"
-        },
-        "escape": true,
-        "exec": "$HOME/.config/waybar/mediaplayer.py 2> /dev/null" // Script in resources folder
-        // "exec": "$HOME/.config/waybar/mediaplayer.py --player spotify 2> /dev/null" // Filter player based on name
-    },
-    "custom/power": {
-        "format" : "⏻ ",
-		"tooltip": false,
-		"menu": "on-click",
-		"menu-file": "$HOME/.config/waybar/power_menu.xml", // Menu file in resources folder
-		"menu-actions": {
-			"shutdown": "shutdown",
-			"reboot": "reboot",
-			"suspend": "systemctl suspend",
-			"hibernate": "systemctl hibernate"
-		}
-    }
+    "interval": 1,
+  },
 }
